# Current_affairs_Verification_tool

./: .gitignore  pyproject.toml  requirements.txt
src/: app.py  config.py
src/components/: sidebar.py
src/database/: connection.py  models.py
src/database/repositories/: article_repo.py  glossary_repo.py  question_repo.py  theme_repo.py  timeline_repo.py  trending_repo.py
src/pages/: 1_themes.py  1_trending.py  2_articles.py  2_themes.py  3_articles.py  3_definitions.py  4_definitions.py  5_questions.py
src/services/: verification_service.py
src/utils/: session_state.py
